--- a/paper/defs.tex
+++ b/paper/defs.tex
@@ -36,6 +36,7 @@
 \DeclareMathOperator{\IN}{IN}
 \DeclareMathOperator{\MID}{MID}
 \DeclareMathOperator{\OUT}{OUT}
+\DeclareMathOperator{\DFA}{DFA}
 \DeclareMathOperator{\MDFA}{MDFA}
 
 
