--- a/paper/main.bib
+++ b/paper/main.bib
@@ -1,3 +1,21 @@
+@inproceedings{DBLP:conf/dac/HaaswijkMSM18,
+	author    = {Winston Haaswijk and
+	Alan Mishchenko and
+	Mathias Soeken and
+	Giovanni De Micheli},
+	title     = {{SAT} based exact synthesis using {DAG} topology families},
+	booktitle = {Proceedings of the 55th Annual Design Automation Conference, {DAC}
+	2018, San Francisco, CA, USA, June 24-29, 2018},
+	pages     = {53:1--53:6},
+	publisher = {{ACM}},
+	year      = {2018},
+	url       = {https://doi.org/10.1145/3195970.3196111},
+	doi       = {10.1145/3195970.3196111},
+	timestamp = {Wed, 16 Oct 2019 14:14:54 +0200},
+	biburl    = {https://dblp.org/rec/conf/dac/HaaswijkMSM18.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/corr/abs-2102-12579,
 	author    = {Alexander S. Kulikov and Danila Pechenev and 
 	Nikita Slezkin},
