--- a/paper/main.tex
+++ b/paper/main.tex
@@ -58,17 +58,17 @@
 %\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
 
 %Editor-only macros:: begin (do not touch as author)%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\EventEditors{John Q. Open and Joan R. Access}
-\EventNoEds{2}
-\EventLongTitle{42nd Conference on Very Important Topics (CVIT 2016)}
-\EventShortTitle{CVIT 2016}
-\EventAcronym{CVIT}
-\EventYear{2016}
-\EventDate{December 24--27, 2016}
-\EventLocation{Little Whinging, United Kingdom}
+\EventEditors{Stefan Szeider, Robert Ganian, and Alexandra Silva}
+\EventNoEds{3}
+\EventLongTitle{47th International Symposium on Mathematical Foundations of Computer Science (MFCS 2022)}
+\EventShortTitle{MFCS 2022}
+\EventAcronym{MFCS}
+\EventYear{2022}
+\EventDate{August 22--26, 2022}
+\EventLocation{Vienna, Austria}
 \EventLogo{}
-\SeriesVolume{42}
-\ArticleNo{23}
+\SeriesVolume{241}
+\ArticleNo{31}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input defs
@@ -76,4 +76,5 @@
 \begin{document}
     \sloppy
     \input body
+    \bibliography{main}
 \end{document}
