--- a/paper/body.tex
+++ b/paper/body.tex
@@ -491,7 +491,7 @@ size of the resulting circuit by~$s(n)$. The first row
 of~Table~\ref{table:sum} shows the values of~$s(n)$ for
 some $n \le 15$ (see~(28) in~\cite{Knuth:2008:ACP:1377542}).
 
-\begin{table}{!ht}
+\begin{table}[!ht]
 \begin{center}
 \begin{tabular}{lrrrrrrrrrrrrrrrrrrrrrr}
 \toprule
