--- a/paper/defs.tex
+++ b/paper/defs.tex
@@ -23,7 +23,7 @@
 \usepackage{booktabs}
 
 %%%%% LISTINGS
-\usepackage{minted} % play with flags [frozencache,cachedir=.] when submitting to arXiv
+\usepackage[frozencache,cachedir=.]{minted} % play with flags [frozencache,cachedir=.] when submitting to arXiv
 \setminted{bgcolor=gray!10}
 
 
