--- a/paper/main.tex
+++ b/paper/main.tex
@@ -15,7 +15,7 @@
 
 \bibliographystyle{plainurl}% the mandatory bibstyle
 
-\title{SAT-based Circuit Local Improvement} %TODO Please add
+\title{SAT-based Circuit Local Improvement} 
 
 %\titlerunning{Dummy short title} %TODO optional, please use if title is longer than one line
 
@@ -55,7 +55,7 @@
 
 \nolinenumbers %uncomment to disable line numbering
 
-%\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
+\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
 
 %Editor-only macros:: begin (do not touch as author)%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \EventEditors{Stefan Szeider, Robert Ganian, and Alexandra Silva}
