--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -17,7 +17,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "9t39vYaFviGt"
+    "id": "9t39vYaFviGt",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "%cd\n",
@@ -25,8 +28,16 @@
     "%rm -r *\n",
     "!git clone https://github.com/alexanderskulikov/circuit_improvement.git\n",
     "%cd circuit_improvement\n",
-    "%mv functions.py functions3.py\n",
-    "!sed -i \"s/functions/functions3/\" /content/circuit_improvement/circuit_search.py"
+    "%mv core/* ../circuit_improvement/\n",
+    "%mkdir circuits/images/\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/functions/ex2.py\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/functions/ex3.py\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/functions/ib.py\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/functions/maj.py\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/functions/mod3.py\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/functions/sum.py\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/functions/th.py\n",
+    "!sed -i \"s/core.//\" /content/circuit_improvement/tutorial.py"
    ],
    "execution_count": null,
    "outputs": []
@@ -34,7 +45,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "txqRvHGEIxR1"
+    "id": "txqRvHGEIxR1",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "!pip install pycosat\n",
@@ -59,7 +73,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "7VYyEQRKyPhB"
+    "id": "7VYyEQRKyPhB",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "#@title Improve the SUM5 circuit of size 12\n",
@@ -77,7 +94,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "kDwdQP4q1-Ny"
+    "id": "kDwdQP4q1-Ny",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "#@title Find an optimum circuit for SUM3 using SAT-solvers\n",
@@ -95,7 +115,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "x19RsQ15xcUt"
+    "id": "x19RsQ15xcUt",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "#@title Build a circuit for SUM5 out of SUM2 and SUM3 blocks\n",
